add interactive color picking with tk

--- a/color-selection/cielab_srgb.ipynb
+++ b/color-selection/cielab_srgb.ipynb
@@ -1,12 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting + Choosing Colors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup:\n",
+    "* In python 3.8.5 virtualenv:\n",
+    "`pip install matplotlib numpy colormath jupyterlab jupyter`\n",
+    "* Install and setup tk\n",
+    "  * This worked for me on Catalina with pyenv: https://github.com/pyenv/pyenv/issues/1375#issuecomment-673144925"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from colors import get_color_maps, plot_maps, get_choices"
+    "from colors import get_color_maps, plot_maps, get_choices, plot_clickable"
    ]
   },
   {
@@ -21,32 +39,79 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = get_color_maps()"
+    "# data = get_color_maps()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %store data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store -r data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((50, None, None), (\"B\", \"G\")),\n",
+      "((50, -112.66955266955273, 23.088023088023107), (\"B\", \"G\")),\n",
+      "((50, -117.8412698412699, -6.095238095238074), (\"B\", \"G\")),\n",
+      "((50, -97.1544011544012, -12.37518037518035), (\"B\", \"G\")),\n",
+      "((50, -86.07215007215012, 9.789321789321804), (\"B\", \"G\")),\n",
+      "((50, -80.90043290043295, 35.64790764790766), (\"B\", \"G\")),\n",
+      "((50, -64.27705627705632, 18.285714285714306), (\"B\", \"G\")),\n",
+      "((50, -63.90764790764797, -8.681096681096676), (\"B\", \"G\")),\n",
+      "((50, -82.37806637806642, -9.789321789321775), (\"B\", \"G\")),\n",
+      "((50, -87.91919191919197, 0.18470418470420213), (\"B\", \"G\")),\n",
+      "((50, -92.72150072150077, 8.311688311688329), (\"B\", \"G\")),\n",
+      "((50, -112.30014430014435, 55.96536796536799), (\"B\", \"G\")),\n",
+      "((50, -101.95670995671, -47.09956709956708), (\"B\", \"G\")),\n",
+      "((50, -69.81818181818187, -36.75613275613274), (\"B\", \"G\")),\n",
+      "((50, -65.01587301587307, 54.487734487734514), (\"B\", \"G\")),\n",
+      "((50, -49.50072150072154, -28.259740259740255), (\"B\", \"G\")),\n"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib tk\n",
+    "\n",
+    "L = 50\n",
+    "c1 = \"B\"\n",
+    "c2 = \"G\"\n",
+    "plot_clickable(data, L, c1, c2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -233,12 +298,13 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
     "plot_maps(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,10 +486,106 @@
        "  'second_option': 'red'},\n",
        " {'rgb': (0.7920808008632513, 0.0, 1.1140548932603982),\n",
        "  'first_option': 'blue',\n",
-       "  'second_option': 'purple'}]"
+       "  'second_option': 'purple'},\n",
+       " {'rgb': (0.0, 0.607077762371491, 0.6366892892986912),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.6009880643232192, 0.6749842237738223),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5947145677413741, 0.6703258411718961),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5890929873907137, 0.6102354421108068),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5851442944716831, 0.6583145906123299),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5768235031565366, 0.5659629116790753),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.572142183630022, 0.6239454553409298),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5600647650747239, 0.5447219539426411),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5540562380902299, 0.5851064118765107),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5523314402863185, 0.4704245369151144),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5531104088873767, 0.3948042679825129),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.559952675000343, 0.41940743113799905),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5712472573311956, 0.4181961735191701),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5757312995603256, 0.48333904809153067),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5834444574677579, 0.43210545877393425),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.6010816735395209, 0.48346741038483904),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5963278182861373, 0.4102561449081492),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5914020393608889, 0.46672946012618394),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.6053719113787743, 0.4398962107601707),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.6041116526160543, 0.34945684956084094),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5978706462195486, 0.32106983756476437),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.592105518991523, 0.364271483169506),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5874650569246592, 0.32002314449425806),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5788892004745096, 0.3660243053085165),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5692652479269775, 0.2599217014632693),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5641650343539464, 0.3155821850602731),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5617430062868031, 0.26134598390680247),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5824002497280861, 0.21884101180073168),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5982842486705137, 0.19235630351600136),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.6111830026542421, 0.778634895169511),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5912508954463699, 0.7363852013377528),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'},\n",
+       " {'rgb': (0.0, 0.5985131200204791, 0.10681506994711357),\n",
+       "  'first_option': 'blue',\n",
+       "  'second_option': 'green'}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
