complete initial color selection

--- a/color-selection/cielab_srgb.ipynb
+++ b/color-selection/cielab_srgb.ipynb
@@ -20,24 +20,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from colors import get_color_maps, plot_maps, get_choices, plot_clickable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* L = 0 - 100\n",
-    "* a and b -128 to 127"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from colormath.color_objects import LabColor, sRGBColor, AppleRGBColor\n",
+    "from colormath.color_conversions import convert_color\n",
+    "\n",
+    "RAINBOW = {\n",
+    "    \"R\": \"red\",\n",
+    "    \"O\": \"orange\",\n",
+    "    \"Y\": \"yellow\",\n",
+    "    \"G\": \"green\",\n",
+    "    \"B\": \"blue\",\n",
+    "    \"P\": \"pink\", # indigo is stupid\n",
+    "    \"V\": \"purple\"\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_color_maps():\n",
+    "    '''This function converts CIELAB colors to RGB\n",
+    "    colors for plotting'''\n",
+    "    data = {}\n",
+    "    for L in range(10, 110, 10):\n",
+    "#     for L in range(60, 70a, 10):\n",
+    "        print(f\"Brightness [L]: {L}\")\n",
+    "        red = np.empty((256, 256))\n",
+    "        green = np.empty((256, 256))\n",
+    "        blue = np.empty((256, 256))\n",
+    "        for xx, a in enumerate(range(-128, 128)):\n",
+    "            for yy, b in enumerate(range(-128, 128)):\n",
+    "                lab = LabColor(L, a, b)\n",
+    "                rgb = convert_color(color=lab, target_cs=sRGBColor)\n",
+    "                red[yy, xx], green[yy, xx], blue[yy, xx] = rgb.get_value_tuple()\n",
+    "\n",
+    "        plot_matrix = np.dstack((np.flipud(red), np.flipud(green), np.flipud(blue)))\n",
+    "        data[L] = plot_matrix\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +96,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_clickable(data, L, c1, c2, num_clicks):\n",
+    "    global clicks\n",
+    "    clicks = 0\n",
+    "    file = open(\"./clicked_colors.txt\", \"a+\")\n",
+    "    comp = f\"{RAINBOW[c1].title()}/{RAINBOW[c2].title()}\"\n",
+    "\n",
+    "    plot_matrix = data[L]\n",
+    "    fig, ax = plt.subplots(figsize=(24, 14))\n",
+    "\n",
+    "    def onclick(event):\n",
+    "        global clicks # bad in general, fine here\n",
+    "        if clicks == 0:\n",
+    "            file.write(f\"\\n# L={L}, {comp}\\n\")\n",
+    "        clicks += 1\n",
+    "        file.write(f'(({L}, {event.xdata}, {event.ydata}), (\"{c1}\", \"{c2}\")),\\n')\n",
+    "        if (clicks == num_clicks):\n",
+    "            plt.close()\n",
+    "            file.close()\n",
+    "            return\n",
+    "        ax.set_title(f\"LAB Colors in sRGB (L = {L}, {comp}, {clicks}/{num_clicks})\", fontsize=18)\n",
+    "        plt.show() # updates title, slow but w/e\n",
+    "        file.flush()\n",
+    "\n",
+    "    ax.imshow(plot_matrix, extent=(-128, 128, -128, 128))\n",
+    "    ax.set_title(f\"LAB Colors in sRGB (L = {L}, {comp}, {clicks}/{num_clicks})\", fontsize=18)\n",
+    "    ax.set_xlabel(\"a axis\", fontsize=18)\n",
+    "    ticks = np.linspace(-128, 128, 16, dtype=int)\n",
+    "    ax.set_xticks(ticks)\n",
+    "    ax.set_xticklabels(ticks)\n",
+    "    ax.set_yticks(ticks)\n",
+    "    ax.set_yticklabels(ticks)\n",
+    "    ax.set_ylabel(\"b axis\", fontsize=18)\n",
+    "    ax.grid(alpha=0.3)\n",
+    "\n",
+    "    fig.canvas.mpl_connect('button_press_event', onclick)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib tk\n",
+    "clicks = 0 # must declare before making global later\n",
+    "\n",
+    "NUM_CLICKS = 12\n",
+    "L = 90 # 50, 60, 70, 80, 90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_clickable(data, L, \"B\", \"G\", NUM_CLICKS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_clickable(data, L, \"G\", \"Y\", NUM_CLICKS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_clickable(data, L, \"Y\", \"O\", NUM_CLICKS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -73,44 +219,104 @@
      "text": [
       "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "plot_clickable(data, L, \"O\", \"R\", NUM_CLICKS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "((50, None, None), (\"B\", \"G\")),\n",
-      "((50, -112.66955266955273, 23.088023088023107), (\"B\", \"G\")),\n",
-      "((50, -117.8412698412699, -6.095238095238074), (\"B\", \"G\")),\n",
-      "((50, -97.1544011544012, -12.37518037518035), (\"B\", \"G\")),\n",
-      "((50, -86.07215007215012, 9.789321789321804), (\"B\", \"G\")),\n",
-      "((50, -80.90043290043295, 35.64790764790766), (\"B\", \"G\")),\n",
-      "((50, -64.27705627705632, 18.285714285714306), (\"B\", \"G\")),\n",
-      "((50, -63.90764790764797, -8.681096681096676), (\"B\", \"G\")),\n",
-      "((50, -82.37806637806642, -9.789321789321775), (\"B\", \"G\")),\n",
-      "((50, -87.91919191919197, 0.18470418470420213), (\"B\", \"G\")),\n",
-      "((50, -92.72150072150077, 8.311688311688329), (\"B\", \"G\")),\n",
-      "((50, -112.30014430014435, 55.96536796536799), (\"B\", \"G\")),\n",
-      "((50, -101.95670995671, -47.09956709956708), (\"B\", \"G\")),\n",
-      "((50, -69.81818181818187, -36.75613275613274), (\"B\", \"G\")),\n",
-      "((50, -65.01587301587307, 54.487734487734514), (\"B\", \"G\")),\n",
-      "((50, -49.50072150072154, -28.259740259740255), (\"B\", \"G\")),\n"
+      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
      ]
     }
    ],
    "source": [
-    "%matplotlib tk\n",
-    "\n",
-    "L = 50\n",
-    "c1 = \"B\"\n",
-    "c2 = \"G\"\n",
-    "plot_clickable(data, L, c1, c2)"
+    "plot_clickable(data, L, \"R\", \"P\", NUM_CLICKS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_clickable(data, L, \"P\", \"V\", NUM_CLICKS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_clickable(data, L, \"V\", \"B\", NUM_CLICKS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_maps(data):\n",
+    "    '''This function takes in L -> (RGB_matrices) mappings\n",
+    "    and plots the CIELAB colormap in sRGB'''\n",
+    "    for L, plot_matrix in data.items():\n",
+    "        fig, ax = plt.subplots(figsize=(16, 9))\n",
+    "        ax.imshow(plot_matrix, extent=(-128, 128, -128, 128))\n",
+    "        ax.set_title(f\"LAB Colors Plotted in sRGB (L = {L})\", fontsize=18)\n",
+    "        ax.set_xlabel(\"a axis\", fontsize=18)\n",
+    "        ticks = np.linspace(-128, 128, 16, dtype=int)\n",
+    "        ax.set_xticks(ticks)\n",
+    "        ax.set_xticklabels(ticks)\n",
+    "        ax.set_yticks(ticks)\n",
+    "        ax.set_yticklabels(ticks)\n",
+    "        ax.set_ylabel(\"b axis\", fontsize=18)\n",
+    "        ax.grid(alpha=0.3)\n",
+    "        plt.show()\n",
+    "        plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -304,8 +510,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_choices():\n",
+    "    '''Parses choices in to RGB + two color options'''\n",
+    "    choices = []\n",
+    "    for choice in CHOICES:\n",
+    "        lab = LabColor(*choice[0])\n",
+    "        rgb = convert_color(color=lab, target_cs=sRGBColor)\n",
+    "        rgb_vals = rgb.get_value_tuple()\n",
+    "        \n",
+    "        first_option = RAINBOW[choice[1][0]]\n",
+    "        second_option = RAINBOW[choice[1][1]]\n",
+    "        choices.append({\n",
+    "            \"rgb\": rgb_vals,\n",
+    "            \"first_option\": first_option,\n",
+    "            \"second_option\": second_option\n",
+    "        })\n",
+    "    return choices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -585,7 +817,7 @@
        "  'second_option': 'green'}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
