connect postgres and scala - fun disco bug with react

--- a/color-selection/cielab_srgb.ipynb
+++ b/color-selection/cielab_srgb.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -436,6 +436,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#009CBB', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#009BAE', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#009B9D', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#009A8E', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00B9CF', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00B9C4', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00B8B3', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00B8A3', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00D8E4', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00D7D8', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00D7C8', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00D6B5', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00F6E7', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00F5D8', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00F5C8', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#00F4B7', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#C6E000', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#D3DD00', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#DADB00', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#E8D600', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#D0F000', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#DAEE00', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#E3EB00', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#EFE700', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#E5FD00', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#E8D600', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F4E500', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F6F800', 'green', 'yellow') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#FBBA00', 'yellow', 'orange') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#EFBF00', 'yellow', 'orange') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F49200', 'yellow', 'orange') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#DE9E00', 'yellow', 'orange') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#FD5300', 'orange', 'red') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#FB5500', 'orange', 'red') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#E32400', 'orange', 'red') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#D63D00', 'orange', 'red') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#D80000', 'orange', 'red') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F90052', 'red', 'pink') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F60067', 'red', 'pink') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F20084', 'red', 'pink') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#E0137F', 'red', 'pink') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F1007B', 'red', 'pink') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#DA0071', 'red', 'pink') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#FA879B', 'red', 'pink') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#CB00F0', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#DE00EE', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#ED00DE', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#D400D3', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#CC64F0', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#DF53F2', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#EA4CE0', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#E64EE6', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F380ED', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F000ED', 'pink', 'purple') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#9C7FF3', 'purple', 'blue') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#9282F4', 'purple', 'blue') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#A247F7', 'purple', 'blue') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#9651F5', 'purple', 'blue') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#9D00F8', 'purple', 'blue') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#9200F0', 'purple', 'blue') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#7300F7', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#6E00CF', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#9980F1', 'blue', 'green') RETURNING id;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#9084EC', 'blue', 'green') RETURNING id;\n",
       "64\n"
      ]
     },
@@ -508,13 +572,15 @@
        " {'hex': '#9084EC', 'first_option': 'blue', 'second_option': 'green'}]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "output = parse_colors()\n",
+    "for color in output:\n",
+    "    print(f\"INSERT INTO color (hex, first_option, second_option) VALUES ('{color['hex']}', '{color['first_option']}', '{color['second_option']}') RETURNING id;\")\n",
     "print(len(output))\n",
     "output"
    ]
