improve colors moar

--- a/color-selection/sat-rgb-xkcd.ipynb
+++ b/color-selection/sat-rgb-xkcd.ipynb
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TOP RIGHT QUADRANT:\n",
+    "# BOTTOM RIGHT QUADRANT:\n",
     "# x axis: min blue to max blue\n",
     "# y axis: max red to min red\n",
     "# 0 green"
@@ -236,11 +236,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#5400FD', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#5D00FD', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#6700FA', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#6300EC', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#5A00EB', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#4D00E7', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#4600D9', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#4C00D5', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#5600D5', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#5000C7', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#4800C4', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#3900C4', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#3500B8', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#3B00B2', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#4C00AE', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#4900A0', 'blue', 'purple') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#3300A4', 'blue', 'purple') RETURNING hex;\n"
+     ]
+    }
+   ],
    "source": [
     "blue, red = np.empty((256, 256)), np.empty((256, 256))\n",
     "for x_idx, blue_val in enumerate(ASCENDING):\n",
@@ -257,7 +281,7 @@
     "    blue = int(event.xdata)\n",
     "    return f\"INSERT INTO color (hex, first_option, second_option) VALUES ('{rgb2hex(red, green, blue)}', '{c1}', '{c2}') RETURNING hex;\"\n",
     "\n",
-    "plot_clickable(data, 'P', 'R', to_write)"
+    "plot_clickable(data, 'B', 'V', to_write)"
    ]
   },
   {
