style of leaderboard, add alt texts

--- a/color-selection/sat-rgb-xkcd.ipynb
+++ b/color-selection/sat-rgb-xkcd.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -109,11 +109,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INSERT INTO color (hex, first_option, second_option) VALUES ('#D04C00', 'red', 'orange') RETURNING hex;\n",
-      "INSERT INTO color (hex, first_option, second_option) VALUES ('#DD4E00', 'red', 'orange') RETURNING hex;\n",
-      "INSERT INTO color (hex, first_option, second_option) VALUES ('#E85000', 'red', 'orange') RETURNING hex;\n",
-      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F35100', 'red', 'orange') RETURNING hex;\n",
-      "INSERT INTO color (hex, first_option, second_option) VALUES ('#FE5400', 'red', 'orange') RETURNING hex;\n"
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#C02A00', 'red', 'orange') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#C33200', 'red', 'orange') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#CD2900', 'red', 'orange') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#D13700', 'red', 'orange') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#D53200', 'red', 'orange') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#DD2B00', 'red', 'orange') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#EC2F00', 'red', 'orange') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F03E00', 'red', 'orange') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#D94400', 'red', 'orange') RETURNING hex;\n",
+      "INSERT INTO color (hex, first_option, second_option) VALUES ('#F55100', 'red', 'orange') RETURNING hex;\n"
      ]
     }
    ],
